--- a/train/preprocess data.ipynb
+++ b/train/preprocess data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "executionInfo": {
      "elapsed": 1323,
@@ -21,11 +21,11 @@
     "import os\n",
     "import unicodedata\n",
     "\n",
-    "dir_root = 'C:/capstone/data/'\n",
-    "image_root = dir_root + \"train/images\"\n",
-    "label_root = dir_root + \"train/labels\"\n",
-    "val_image_root = dir_root + 'validation/images'\n",
-    "val_label_root = dir_root + 'validation/labels'\n",
+    "dir_root = 'C:/capstone/data'\n",
+    "image_root = dir_root + \"/train/images\"\n",
+    "label_root = dir_root + \"/train/labels\"\n",
+    "val_image_root = dir_root + '/validation/images'\n",
+    "val_label_root = dir_root + '/validation/labels'\n",
     "\n",
     "# 클래스 이름과 클래스 인덱스 매핑\n",
     "product_list = os.listdir(image_root)\n",
@@ -36,7 +36,6 @@
     "\n",
     "product_map = {\n",
     "    #unicodedata.normalize(\"NFC\", product_list[idx][6:]): idx for idx in range(len(product_list))\n",
-    "\n",
     "    product_list[idx][product_list[idx].find('_')+1:]: idx for idx in range(len(product_list))\n",
     "}"
    ]
@@ -49,14 +48,14 @@
    "source": [
     "import xml.etree.ElementTree as ET\n",
     "\n",
-    "def _get_annot_root(root):\n",
+    "def get_annot_root(root):\n",
     "    # <annotation>이 루트 바로 아래, 또는 최상위 루트가 <annotation>인 경우 처리\n",
     "    ann = root.find(\"annotation\")\n",
     "    return ann if ann is not None else root\n",
     "\n",
     "def xml_to_yolo(xml_path, label_output_path):\n",
     "    tree = ET.parse(xml_path)\n",
-    "    root = _get_annot_root(tree.getroot())\n",
+    "    root = get_annot_root(tree.getroot())\n",
     "\n",
     "    size = root.find(\"size\")\n",
     "    img_width = int(size.find(\"width\").text)\n",
@@ -86,7 +85,7 @@
     "\n",
     "def xml_to_pascal_voc(xml_path):\n",
     "    tree = ET.parse(xml_path)\n",
-    "    root = _get_annot_root(tree.getroot())\n",
+    "    root = get_annot_root(tree.getroot())\n",
     "\n",
     "    labels = []\n",
     "    bboxes = []\n",
@@ -117,12 +116,37 @@
     "        y = y*dh\n",
     "        h = h*dh\n",
     "        ret.append([x,y,w,h])\n",
-    "    return ret"
+    "    return ret\n",
+    "\n",
+    "def to_pixel_pascal_voc(boxes, W, H):\n",
+    "    fixed = []\n",
+    "    for x1, y1, x2, y2 in boxes:\n",
+    "        # 0~1 범위면 YOLO/정규화 좌표로 간주 → 픽셀 VOC로 환산\n",
+    "        if 0.0 <= x1 <= 1.0 and 0.0 <= y1 <= 1.0 and 0.0 <= x2 <= 1.0 and 0.0 <= y2 <= 1.0:\n",
+    "            x1, x2 = x1 * W, x2 * W\n",
+    "            y1, y2 = y1 * H, y2 * H\n",
+    "\n",
+    "        # 순서 뒤집힌 케이스 보정\n",
+    "        if x2 < x1: x1, x2 = x2, x1\n",
+    "        if y2 < y1: y1, y2 = y2, y1\n",
+    "\n",
+    "        # 경계 클리핑\n",
+    "        x1 = max(0, min(x1, W - 1))\n",
+    "        x2 = max(0, min(x2, W - 1))\n",
+    "        y1 = max(0, min(y1, H - 1))\n",
+    "        y2 = max(0, min(y2, H - 1))\n",
+    "\n",
+    "        # 0 면적 방지(1px 확장)\n",
+    "        if x2 <= x1: x2 = min(W - 1, x1 + 1)\n",
+    "        if y2 <= y1: y2 = min(H - 1, y1 + 1)\n",
+    "\n",
+    "        fixed.append([int(round(x1)), int(round(y1)), int(round(x2)), int(round(y2))])\n",
+    "    return fixed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -142,39 +166,37 @@
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import albumentations as A\n",
+    "import random\n",
     "\n",
     "augmentor_light = A.Compose([\n",
-    "    A.LongestMaxSize(max_size=640),\n",
-    "    A.HorizontalFlip(p=0.5),\n",
-    "    A.Affine(scale=(0.7,1.3), translate_percent=(-0.3, 0.3), rotate=(0, 360), shear=(-20, 20), p=0.5),\n",
-    "    A.MotionBlur(blur_limit=(8,17), allow_shifted=True, p=0.3)\n",
-    "], p=1)\n",
-    "\n",
-    "augmentor_mid = A.Compose([\n",
-    "    A.LongestMaxSize(max_size=640),\n",
-    "    A.CoarseDropout(num_holes_range=(1,3), hole_height_range=(0.1,0.3), hole_width_range=(0.1,0.3), p=0.5),\n",
-    "    A.HorizontalFlip(p=0.5),\n",
-    "    A.Affine(scale=(0.8,1.2), translate_percent=(-0.3, 0.3), rotate=(0, 360), shear=(-10, 10), p=0.5),\n",
-    "    A.MotionBlur(blur_limit=(9, 25), p=0.5),\n",
-    "    A.OneOf([\n",
-    "        A.ColorJitter(brightness=(0.8, 1.2), contrast=0, saturation=(0.8,1.2), hue=0, p=1),\n",
-    "        A.RandomBrightnessContrast(brightness_limit=(-0.2, 0.2), contrast_limit=0, p=1)\n",
-    "    ], p=0.5)\n",
-    "], p=1)\n",
+    "    A.MotionBlur(blur_limit=(9, 25), p=0.2),\n",
+    "])\n",
     "\n",
     "augmentor_heavy = A.Compose([\n",
-    "    A.LongestMaxSize(max_size=640),\n",
-    "    A.CoarseDropout(num_holes_range=(1,3), hole_height_range=(0.1,0.3), hole_width_range=(0.1,0.3), p=0.5),\n",
-    "    A.HorizontalFlip(p=0.5),\n",
-    "    A.Affine(scale=(0.8,1.2), translate_percent=(-0.3, 0.3), rotate=(0, 360), shear=(-10, 10), p=0.5),\n",
-    "    # A.CLAHE(clip_limit=4.0, p=0.5),\n",
-    "    A.MotionBlur(blur_limit=(9, 25), p=0.5),\n",
-    "    A.OneOf([\n",
-    "        A.ColorJitter(brightness=(0.8, 1.2), contrast=0, saturation=(0.8,1.2), hue=0, p=1),\n",
-    "        A.RandomBrightnessContrast(brightness_limit=(-0.2, 0.2), contrast_limit=0, p=1)\n",
-    "    ], p=0.5)\n",
-    "], p=1)"
+    "    A.Affine(scale=(0.5,1.5), translate_percent=(0.0, 0.3), rotate=(0, 360), shear=0, p=0.5),\n",
+    "    A.CoarseDropout(num_holes_range=(1,3), hole_height_range=(0.1,0.3), hole_width_range=(0.1,0.3), p=0.2),\n",
+    "    A.RandomBrightnessContrast(brightness_limit=(-0.3, 0.4), contrast_limit=0, p=0.2),\n",
+    "    A.RandomShadow(num_shadows_limit=(1,2), shadow_dimension=5, shadow_intensity_range=(0.1,0.3), p=0.2),\n",
+    "    A.MotionBlur(blur_limit=(9, 25), p=0.2),\n",
+    "    A.ISONoise(color_shift=(0.005, 0.02), intensity=(0.05, 0.15), p=1.0),\n",
+    "], p=1)\n",
+    "\n",
+    "def add_vignette(img, strength=0.45, power=2.2, p=0.2):\n",
+    "    \"\"\"가장자리 어둡게 (비네팅)\"\"\"\n",
+    "\n",
+    "    if random.random() > p:\n",
+    "        return img\n",
+    "\n",
+    "    h, w = img.shape[:2]\n",
+    "    y, x = np.ogrid[:h, :w]\n",
+    "    cy, cx = h / 2, w / 2\n",
+    "    dist = np.sqrt((x - cx)**2 + (y - cy)**2)\n",
+    "    max_dist = np.sqrt(cx**2 + cy**2)\n",
+    "    mask = 1 - strength * (dist / max_dist) ** power\n",
+    "    mask = np.clip(mask, 0, 1).astype(np.float32)\n",
+    "    return (img.astype(np.float32) * mask[..., None]).clip(0, 255).astype(np.uint8)"
    ]
   },
   {
@@ -199,31 +221,6 @@
     "import albumentations as A\n",
     "import cv2\n",
     "\n",
-    "def _to_pixel_pascal_voc(boxes, W, H):\n",
-    "    fixed = []\n",
-    "    for x1, y1, x2, y2 in boxes:\n",
-    "        # 0~1 범위면 YOLO/정규화 좌표로 간주 → 픽셀 VOC로 환산\n",
-    "        if 0.0 <= x1 <= 1.0 and 0.0 <= y1 <= 1.0 and 0.0 <= x2 <= 1.0 and 0.0 <= y2 <= 1.0:\n",
-    "            x1, x2 = x1 * W, x2 * W\n",
-    "            y1, y2 = y1 * H, y2 * H\n",
-    "\n",
-    "        # 순서 뒤집힌 케이스 보정\n",
-    "        if x2 < x1: x1, x2 = x2, x1\n",
-    "        if y2 < y1: y1, y2 = y2, y1\n",
-    "\n",
-    "        # 경계 클리핑\n",
-    "        x1 = max(0, min(x1, W - 1))\n",
-    "        x2 = max(0, min(x2, W - 1))\n",
-    "        y1 = max(0, min(y1, H - 1))\n",
-    "        y2 = max(0, min(y2, H - 1))\n",
-    "\n",
-    "        # 0 면적 방지(1px 확장)\n",
-    "        if x2 <= x1: x2 = min(W - 1, x1 + 1)\n",
-    "        if y2 <= y1: y2 = min(H - 1, y1 + 1)\n",
-    "\n",
-    "        fixed.append([int(round(x1)), int(round(y1)), int(round(x2)), int(round(y2))])\n",
-    "    return fixed\n",
-    "\n",
     "def augment(img_path, xml_path, augmentor):\n",
     "  # 바운딩 박스 형식 지정 (Pascal VOC 형식)\n",
     "  # img = cv2.imread(img_path)\n",
@@ -232,10 +229,12 @@
     "  labels, bboxes = xml_to_pascal_voc(xml_path)\n",
     "\n",
     "  # 정규화/YOLO 값이 섞여 있어서 픽셀 VOC로 강제 통일\n",
-    "  bboxes = _to_pixel_pascal_voc(bboxes, img.shape[1], img.shape[0])\n",
+    "  bboxes = to_pixel_pascal_voc(bboxes, img.shape[1], img.shape[0])\n",
     "\n",
-    "  transform = A.Compose(\n",
+    "  transform = A.Compose([\n",
+    "    A.LongestMaxSize(max_size=640),\n",
     "    augmentor,\n",
+    "    ],\n",
     "    bbox_params=A.BboxParams(\n",
     "      format='pascal_voc',\n",
     "      label_fields=['category_ids'],\n",
@@ -246,15 +245,36 @@
     "\n",
     "  # 증강 적용\n",
     "  augmented = transform(image=img, bboxes=bboxes, category_ids=labels)\n",
+    "  img_aug = add_vignette(augmented['image'], p=0)\n",
     "\n",
     "  if len(augmented['bboxes']) == 0:\n",
     "    return labels, img, []  # 바운딩 박스 예외 처리\n",
-    "  return labels, augmented['image'], augmented['bboxes']"
+    "  return labels, img_aug, augmented['bboxes']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### augmentor 테스트\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "img_array = np.fromfile('10102_30_s_2.jpg', np.uint8)\n",
+    "img = cv2.imdecode(img_array, cv2.IMREAD_COLOR)\n",
+    "\n",
+    "_, img, _ = augment('10102_30_s_2.jpg', '10102_30_s_2_meta.xml', augmentor_light)\n",
+    "\n",
+    "cv2.imshow('window', img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "executionInfo": {
      "elapsed": 3,
@@ -276,19 +296,15 @@
     "def process_dataset(pairs, split):\n",
     "  for img_path, xml_path in pairs:\n",
     "    filename = os.path.basename(img_path)\n",
-    "    dst_img = f\"{dir_root}processed/images/{split}/\"\n",
-    "    dst_label = f\"{dir_root}processed/labels/{split}/\"\n",
-    "\n",
-    "    # 추가 데이터셋\n",
-    "    # dst_img = f\"{dir_root}processed/extra/images/{split}/\"\n",
-    "    # dst_label = f\"{dir_root}processed/extra/labels/{split}/\"\n",
+    "    dst_img = f\"{dir_root}/processed/images/{split}/\"\n",
+    "    dst_label = f\"{dir_root}/processed/labels/{split}/\"\n",
     "\n",
     "    if(split == 'train'):\n",
     "      # 증강 없이 복사\n",
     "      # shutil.copy(img_path, dst_img + filename[:-4]+\"_0\"+filename[-4:])\n",
     "      # xml_to_yolo(xml_path, dst_label + filename[:-4]+\"_0.txt\")\n",
     "\n",
-    "      labels, augimg, augboxes = augment(img_path, xml_path, augmentor_heavy)\n",
+    "      labels, augimg, augboxes = augment(img_path, xml_path, augmentor_light)\n",
     "      if(len(augboxes) == 0):\n",
     "        continue\n",
     "\n",
@@ -297,14 +313,14 @@
     "      with open(dst_label + filename[:-4]+\"_1.txt\", \"w\") as f:\n",
     "        for label, bbox in zip(labels, bboxes):\n",
     "          f.write(f\"{product_map[label]} {bbox[0]} {bbox[1]} {bbox[2]} {bbox[3]}\\n\")\n",
-    "    elif(split == 'validation'):\n",
+    "    elif(split == 'val'):\n",
     "      xml_to_yolo(xml_path, dst_label+ f\"{filename.replace('.jpg', '.txt')}\")\n",
     "      shutil.copy(img_path, dst_img + f\"{filename}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -325,7 +341,6 @@
    "outputs": [],
    "source": [
     "from glob import glob\n",
-    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "def set_dataset(image_root, label_root):\n",
     "  image_label_pairs = []\n",
@@ -338,26 +353,21 @@
     "    for img_path in image_files:\n",
     "      filename = os.path.basename(img_path)\n",
     "      xml_path = os.path.join(label_dir, filename.replace(\".jpg\", \"_meta.xml\"))\n",
-    "      # 추가 데이터셋\n",
-    "      # xml_path = os.path.join(label_dir, filename.replace(\".jpg\", \".xml\"))\n",
     "      image_label_pairs.append((img_path, xml_path))\n",
     "  return image_label_pairs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set_dataset의 xml 파일명 확인\n",
     "train_pairs = set_dataset(image_root, label_root)\n",
     "val_pairs = set_dataset(val_image_root, val_label_root)\n",
     "\n",
-    "# process_dataset()의 저장 경로 확인\n",
-    "# xml_to_yolo(), xml_to_pascal_voc 루트 파싱 확인\n",
     "process_dataset(train_pairs, 'train')\n",
-    "process_dataset(val_pairs, 'validation')"
+    "process_dataset(val_pairs, 'val')"
    ]
   },
   {
@@ -366,22 +376,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "extra_image_root = dir_root + 'extra/images'\n",
-    "extra_label_root = dir_root + 'extra/labels'\n",
-    "\n",
-    "# set_dataset의 xml 파일명 확인\n",
-    "extra_pairs = set_dataset(extra_image_root, extra_label_root)\n",
-    "# process_dataset()의 저장 경로 확인\n",
-    "# xml_to_yolo(), xml_to_pascal_voc 루트 파싱 확인\n",
-    "process_dataset(extra_pairs, 'train')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "### 비분류 xml 파일을 서브 폴더로 정리\n",
     "import os\n",
     "import shutil\n",
     "\n",
@@ -413,6 +408,37 @@
     "            else:\n",
     "                print(f\"Warning: {xml_file} not found in {label_root}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### 라벨 데이터 파일명에 _meta 추가\n",
+    "import os\n",
+    "\n",
+    "# 대상 루트 경로\n",
+    "root_dir = r\"C:\\capstone\\data\\extra\\labels\"\n",
+    "\n",
+    "# 모든 하위 폴더 순회\n",
+    "for folder_path, _, files in os.walk(root_dir):\n",
+    "    for file_name in files:\n",
+    "        # 확장자 분리\n",
+    "        name, ext = os.path.splitext(file_name)\n",
+    "        new_name = f\"{name}_meta{ext}\"\n",
+    "        \n",
+    "        old_path = os.path.join(folder_path, file_name)\n",
+    "        new_path = os.path.join(folder_path, new_name)\n",
+    "\n",
+    "        # 이미 '_meta'가 붙은 파일은 건너뛰기\n",
+    "        if \"_meta\" in name:\n",
+    "            continue\n",
+    "        \n",
+    "        # 이름 변경\n",
+    "        os.rename(old_path, new_path)\n",
+    "        print(f\"Renamed: {old_path} → {new_path}\")"
+   ]
   }
  ],
  "metadata": {
@@ -424,7 +450,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "venv310",
    "language": "python",
    "name": "python3"
   },
@@ -438,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
