Feat: Update train code

--- a/train/train pd.ipynb
+++ b/train/train pd.ipynb
@@ -20,19 +20,17 @@
    "source": [
     "import os\n",
     "\n",
-    "dir_root = './data'\n",
-    "image_root = dir_root + \"/train/images\"\n",
-    "label_root = dir_root + \"/train/labels\"\n",
+    "dir_root = 'C:/capstone/data'\n",
+    "image_root = dir_root + '/train/images'\n",
+    "label_root = dir_root + '/train/labels'\n",
     "\n",
-    "# 클래스 이름과 클래스 인덱스 매핑\n",
     "product_list = os.listdir(image_root)\n",
-    "for i in range(len(product_list)):\n",
-    "    product_list[i] = product_list[i][6:]"
+    "product_list = [product_list[idx][product_list[idx].find('_')+1:] for idx in range(len(product_list))]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +38,7 @@
     "\n",
     "data = {\n",
     "    'train': 'C:/capstone/data/processed/images/train',\n",
-    "    'val': 'C:/capstone/data/processed/images/validation',\n",
+    "    'val': 'C:/capstone/data/processed/images/val',\n",
     "    'nc': len(product_list),\n",
     "    'names': product_list\n",
     "}\n",
@@ -69,16 +67,35 @@
     "from ultralytics import YOLO\n",
     "\n",
     "# Load a YOLO model\n",
-    "saved = 'runs/detect/product_detector5/weights/best.pt'\n",
-    "model = YOLO(saved)\n",
+    "saved = 'runs/detect/product_detector22/weights/best.pt'\n",
+    "model = YOLO('yolo11m.pt')\n",
+    "# model = YOLO(saved)\n",
     "\n",
-    "results = model.train(data=\"data.yaml\", epochs=10, batch=8, imgsz=640, device=0, name='product_detector')\n",
+    "results = model.train(data=\"data.yaml\", epochs=50, batch=8, imgsz=640, device=0, name='product_detector', freeze=20)\n",
     "\n",
     "# Evaluate the model's performance on the validation set\n",
-    "results = model.val()\n",
+    "# results = model.val()\n",
     "\n",
     "# Export the model to ONNX format\n",
     "# success = model.export(format=\"onnx\", device=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ultralytics import YOLO\n",
+    "\n",
+    "saved = 'C:/capstone/git/product-detector/train/runs/detect/product_detector26/weights/best.pt'\n",
+    "model = YOLO(saved)\n",
+    "\n",
+    "pred = model.predict(source=0, imgsz=640, device=0, show=True, vid_stride=2, conf=0.6)\n",
+    "\n",
+    "# pred = model.predict(source='C:/capstone/git/product-detector/train/test/KakaoTalk_20251024_131209705_02.jpg', imgsz=640, device=0, save=True)\n",
+    "\n",
+    "# yolo detect predict model='C:/capstone/git/product-detector/train/runs/detect/product_detector13/weights/best.pt' source=0, device=0, show=True"
    ]
   },
   {
